Clock: Fix typo in tooltip (bug #8137).

--- a/plugins/clock/clock-dialog.glade
+++ b/plugins/clock/clock-dialog.glade
@@ -119,8 +119,7 @@
                           <object class="GtkEntry" id="tooltip-format">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="tooltip_text" translatable="yes">The format describes the date and time parts to insert into the file name. For example, %Y will be substituted with the year, %m with the month and %d with the day. See the documentation of the date utility for additional information.</property>
-                            <property name="invisible_char">&#x2022;</property>
+                            <property name="tooltip_text" translatable="yes">The format describes the date and time parts to insert into the panel. For example, %Y will be substituted with the year, %m with the month and %d with the day. See the documentation of the date utility for additional information.</property>
                           </object>
                           <packing>
                             <property name="left_attach">1</property>
@@ -268,8 +267,7 @@
                               <object class="GtkEntry" id="digital-format">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="tooltip_text" translatable="yes">The format describes the date and time parts to insert into the file name. For example, %Y will be substituted with the year, %m with the month and %d with the day. See the documentation of the date utility for additional information.</property>
-                                <property name="invisible_char">&#x2022;</property>
+                                <property name="tooltip_text" translatable="yes">The format describes the date and time parts to insert into the panel. For example, %Y will be substituted with the year, %m with the month and %d with the day. See the documentation of the date utility for additional information.</property>
                               </object>
                               <packing>
                                 <property name="left_attach">1</property>
