--- a/panel/panel-preferences-dialog.glade
+++ b/panel/panel-preferences-dialog.glade
@@ -22,6 +22,8 @@
   </object>
   <object class="GtkListStore" id="panel-store">
     <columns>
+      <!-- column-name id -->
+      <column type="gint"/>
       <!-- column-name title -->
       <column type="gchararray"/>
     </columns>
@@ -132,7 +134,7 @@
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext2"/>
                       <attributes>
-                        <attribute name="text">0</attribute>
+                        <attribute name="text">1</attribute>
                       </attributes>
                     </child>
                   </object>
