Clock plugin: adjusted defaults.
- A simpler label for the configuration button.
- An empty string for the time configuration command
  - the button is grayed out when the config command is empty

--- a/plugins/clock/clock-dialog.glade
+++ b/plugins/clock/clock-dialog.glade
@@ -124,7 +124,7 @@
                         </child>
                         <child>
                           <object class="GtkButton" id="run-time-config-tool">
-                            <property name="label" translatable="yes">_Run configuration tool</property>
+                            <property name="label" translatable="yes">_Set</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
