Clock plugin: changed the tooltip text.

--- a/plugins/clock/clock-dialog.glade
+++ b/plugins/clock/clock-dialog.glade
@@ -128,7 +128,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text" translatable="yes">Alternatively, use a "date" utility to set your system time.</property>
+                            <property name="tooltip_text" translatable="yes">Start a tool for setting the system time and date. If the button is grayed out, check the "Help" page to see how to configure it correctly.</property>
                             <property name="use_action_appearance">False</property>
                             <property name="use_underline">True</property>
                           </object>
